--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -155,26 +155,29 @@ ul {
 .dropdown-custom button {
     border: none;
     color: #0d3b66;
-    padding-top: 8px;
-    padding-right: 8px;
-    padding-bottom: 8px;
-    padding-left: 0px;
+    padding: 8px;
     width: 100%;
     background-color: #fff;
     border-radius: 5px;
     transition: 0.5s;
+    display: flex;
+    justify-content: space-between;
 }
 .dropdown-custom-child button {
     border: none;
     color: #0d3b66;
-    padding-top: 8px;
-    padding-right: 8px;
-    padding-bottom: 8px;
-    padding-left: 0px;
+    padding: 8px;
     width: 100%;
     border-radius: 5px;
     transition: 0.5s;
     font-size: 12px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.customtoogle i{
+    margin-left: 2px;
+    margin-right: 6px;
 }
 
 /* .dropdown-custom .active-custom {
@@ -195,7 +198,7 @@ ul {
 }
 
 .button-icon {
-    margin-right: 9px;
+    /* margin-right: 9px; */
 }
 
 .dropdown-custom ul {
@@ -221,7 +224,7 @@ ul {
 } */
 
 .down {
-    margin-left: 140px;
+    /* background-color: #05D2FF; */
 }
 
 .user-custom {
