--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -12,6 +12,9 @@
     color: #fff;
 } */
 
+
+
+
 .mynav li a {
     color: #0d3b66;
     text-decoration: none;
@@ -243,4 +246,5 @@ ul {
 
 #bdSidebar {
     color: #0d3b66;
+    width: 270px;
 }
